# template-rust-restful

./: Cargo.toml  Dockerfile  README.md  cargo-generate.toml
.config/: default.config.json
.docker/: docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker.yml
{{crate_name}}/: Cargo.toml  README.md
{{crate_name}}/src/: main.rs
{{crate_name}}/src/api/: interface.rs
{{crate_name}}/src/api/endpoints/: index.rs
{{crate_name}}/src/core/: context.rs  settings.rs
