[package]
authors = ["{{author}}"]
categories = []
description = "{{description}}"
edition = "{{edition}}"
keywords = []
license = "{{spdx-license}}"
name = "{{crate_name}}"
publish = "{{publish}}"
readme = "{{readme}}"
repository = "https://github.com/{{gh_user}}/{{crate_name}}"
rust-version = "{{rust_version}}"
version = "{{crate_version}}"

[[bin]]
bench = false
name = "{{crate_name}}"

[dependencies]
axum = { features = ["headers"], version = "0.5.11" }
bcrypt = "0.13.0"
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
config = "0.13.1"
diesel = "2.0.0-rc.0"
glob = "0.3.0"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.19" }
reqwest = "0.11.11"
serde = { features = ["derive"], version = "1.0.138" }
serde_json = "1.0.82"
tokio = { features = ["full"], version = "1.19.2" }
tower = "0.4.13"
tower-http = { features = ["compression-br", "propagate-header", "sensitive-headers", "trace"], version = "0.3.4" }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[build-dependencies]

[dev-dependencies]
